# sasquatch

./: ARCHITECTURE.md  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: publish.yml
examples/: sample4_data_advanced.sas  sample5_stats_macro.sas
src/sas2databricks/: __init__.py  cli.py  macros.py  pipeline.py  project.py  report_index.py
src/sas2databricks/emitters/: __init__.py  dlt_emitter.py  pyspark_emitter.py  sparksql_emitter.py  validation_emitter.py
src/sas2databricks/ir/: __init__.py
src/sas2databricks/llm/: __init__.py  orchestrator.py  providers.py
src/sas2databricks/parser/: __init__.py  lexer.py  sas_parser.py
src/sas2databricks/transpilers/: __init__.py  data_step.py  proc_stats.py
tests/: test_end_to_end_features.py  test_pipeline.py  test_roadmap_features.py
