[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sas2databricks"
version = "0.3.1"
description = "LLM-assisted migration of SAS analytics, transformations, and reports to Databricks (PySpark, Spark SQL, DLT, Workflows)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sas2databricks contributors" }]
keywords = ["sas", "databricks", "pyspark", "migration", "transpiler", "spark", "etl", "llm", "copilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "lark>=1.1.9",
    "sqlglot>=25.0.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "jinja2>=3.1.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0"]
llm = ["anthropic>=0.39.0", "openai>=1.40.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
s2db = "sas2databricks.cli:main"

[project.urls]
Homepage = "https://github.com/navintkr/sas2databricks"
Issues = "https://github.com/navintkr/sas2databricks/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sas2databricks"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["out", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
